--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CO2 Emission Calculator</title>
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <title>Carbon emissions calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CO2 Emission Calculator</h1>
-    <form action="/calculate" method="post">
-        <label for="distance">Distance traveled (in km):</label>
-        <input type="number" id="distance" name="distance" required>
-        <button type="submit">Calculate</button>
-    </form>
+    <section class="header">
+<!--TO ADD A LOGO-->
+<!--
+    <nav>
+        <a href="index.html"><img src="images/(insert image name here)"></a>
+        div
+    </nav>
+-->
 
-    {% if co2_emission %}
-        <p>CO2 Emission: {{ co2_emission }} kg</p>
-    {% endif %}
+
+</section>
 </body>
 </html>
